--- a/app/src/main/res/layout/view_layer_view.xml
+++ b/app/src/main/res/layout/view_layer_view.xml
@@ -86,4 +86,14 @@
         android:layout_height="wrap_content"
         tools:ignore="ContentDescription,RtlHardcoded" />
 
+    <ImageView
+        android:id="@+id/view_layer_duplicate"
+        style="?attr/actionButtonStyle"
+        android:src="@drawable/ic_content_copy_black_48px"
+        android:layout_alignTop="@id/view_layer_delete"
+        android:layout_toRightOf="@id/view_layer_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="ContentDescription,RtlHardcoded" />
+
 </RelativeLayout>
