--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="success">#66bb6a</color>
     <color name="error">#e57373</color>
     <color name="progress">#ff852d</color>
+    <color name="layer_background">#f7a6a6</color>
 </resources>
