--- a/app/src/main/res/layout/view_layer_view.xml
+++ b/app/src/main/res/layout/view_layer_view.xml
@@ -15,35 +15,9 @@
         android:layout_height="wrap_content"
         tools:ignore="RtlHardcoded" />
 
-    <Spinner
-        android:id="@+id/view_layer_blend_mode"
-        android:layout_below="@id/view_layer_title"
-        android:gravity="right"
-        android:layout_marginLeft="24dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:ignore="RtlHardcoded" />
-
-    <Spinner
-        android:id="@+id/view_layer_porter_duff"
-        android:gravity="right"
-        android:layout_below="@id/view_layer_blend_mode"
-        android:layout_marginLeft="24dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:ignore="RtlHardcoded" />
-
-    <SeekBar
-        android:id="@+id/view_layer_alpha"
-        android:max="100"
-        android:progress="1"
-        android:layout_below="@id/view_layer_porter_duff"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
     <android.support.v7.widget.CardView
         android:id="@+id/view_layer_thumbnail_container"
-        android:layout_below="@id/view_layer_alpha"
+        android:layout_below="@id/view_layer_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -94,6 +68,16 @@
         android:src="@drawable/ic_content_copy_black_48px"
         android:layout_alignTop="@id/view_layer_delete"
         android:layout_toRightOf="@id/view_layer_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="ContentDescription,RtlHardcoded" />
+
+    <ImageView
+        android:id="@+id/view_layer_settings"
+        style="?attr/actionButtonStyle"
+        android:src="@drawable/ic_more_vert_black_48px"
+        android:layout_alignLeft="@id/view_layer_duplicate"
+        android:layout_above="@id/view_layer_duplicate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:ignore="ContentDescription,RtlHardcoded" />
