--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -123,7 +123,7 @@
             android:gravity="center_horizontal"
             android:text="@string/layers" />
 
-        <android.support.v7.widget.RecyclerView
+        <com.savvasdalkitsis.gameframe.draw.view.LayersView
             android:id="@+id/view_draw_layers"
             android:layout_width="240dp"
             android:layout_height="match_parent"
