--- a/app/src/main/res/menu/menu_control.xml
+++ b/app/src/main/res/menu/menu_control.xml
@@ -4,6 +4,7 @@
 
     <item
         android:id="@+id/action_setup_ip"
+        android:orderInCategory="3"
         android:icon="@drawable/ic_settings_ethernet_white_48px"
         android:title="@string/setup_ip_address"
         app:showAsAction="ifRoom"/>
