--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -1,122 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/view_draw_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <com.sothree.slidinguppanel.SlidingUpPanelLayout
+        android:id="@+id/view_draw_sliding_up_panel"
+        android:gravity="bottom"
+        app:umanoPanelHeight="0dp"
+        app:umanoShadowHeight="4dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.savvasdalkitsis.gameframe.grid.view.LedGridView
-            android:id="@+id/view_draw_led_grid_view"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp" />
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/view_draw_open_palette"
-            style="?attr/actionButtonStyle"
-            android:layout_marginLeft="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/view_draw_led_grid_view"
-            android:src="@drawable/ic_palette_black_48px"
-            tools:ignore="ContentDescription,RtlHardcoded" />
+            <com.savvasdalkitsis.gameframe.grid.view.LedGridView
+                android:id="@+id/view_draw_led_grid_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp" />
 
-        <include
-            android:id="@+id/view_draw_palette"
-            layout="@layout/view_palette"
-            android:layout_toRightOf="@+id/view_draw_open_palette"
-            android:layout_toLeftOf="@+id/view_draw_open_layers"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/view_draw_led_grid_view"
-            android:layout_marginLeft="14dp"
-            android:layout_marginRight="14dp"
-            tools:ignore="RtlHardcoded" />
-
-        <ImageView
-            android:id="@+id/view_draw_open_layers"
-            style="?attr/actionButtonStyle"
-            android:layout_marginRight="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/view_draw_led_grid_view"
-            android:src="@drawable/ic_toc_black_48px"
-            tools:ignore="ContentDescription,RtlHardcoded" />
-
-        <HorizontalScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/view_draw_palette"
-            android:layout_marginRight="100dp"
-            tools:ignore="RtlHardcoded">
-
-            <LinearLayout
-                android:id="@+id/view_draw_tools"
+            <ImageView
+                android:id="@+id/view_draw_open_palette"
+                style="?attr/actionButtonStyle"
+                android:layout_marginLeft="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_below="@id/view_draw_led_grid_view"
+                android:src="@drawable/ic_palette_black_48px"
+                tools:ignore="ContentDescription,RtlHardcoded" />
 
-                <com.savvasdalkitsis.gameframe.draw.view.PencilToolView
+            <include
+                android:id="@+id/view_draw_palette"
+                layout="@layout/view_palette"
+                android:layout_toRightOf="@+id/view_draw_open_palette"
+                android:layout_toLeftOf="@+id/view_draw_open_layers"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/view_draw_led_grid_view"
+                android:layout_marginLeft="14dp"
+                android:layout_marginRight="14dp"
+                tools:ignore="RtlHardcoded" />
+
+            <ImageView
+                android:id="@+id/view_draw_open_layers"
+                style="?attr/actionButtonStyle"
+                android:layout_marginRight="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/view_draw_led_grid_view"
+                android:src="@drawable/ic_toc_black_48px"
+                tools:ignore="ContentDescription,RtlHardcoded" />
+
+            <LinearLayout
+                android:layout_below="@id/view_draw_palette"
+                android:orientation="horizontal"
+                android:padding="12dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/view_draw_tools_change"
+                    android:text="@string/change_tool"
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <com.savvasdalkitsis.gameframe.draw.view.ToolView
+                    android:id="@+id/view_draw_tools_current"
                     style="?attr/actionButtonStyle"
+                    tools:src="@drawable/ic_create_black_48px"
+                    android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:ignore="ContentDescription,RtlHardcoded" />
+                    tools:ignore="RtlHardcoded" />
 
-                <com.savvasdalkitsis.gameframe.draw.view.FillToolView
-                    style="?attr/actionButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:ignore="ContentDescription,RtlHardcoded" />
-
-                <com.savvasdalkitsis.gameframe.draw.view.ClearToolView
-                    style="?attr/actionButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:ignore="ContentDescription,RtlHardcoded" />
-
-                <com.savvasdalkitsis.gameframe.draw.view.EraseToolView
-                    style="?attr/actionButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:ignore="ContentDescription,RtlHardcoded" />
-
-                <com.savvasdalkitsis.gameframe.draw.view.MoveToolView
-                    style="?attr/actionButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:ignore="ContentDescription,RtlHardcoded" />
-
-                <com.savvasdalkitsis.gameframe.draw.view.RectangleToolView
-                    style="?attr/actionButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:ignore="ContentDescription,RtlHardcoded" />
-
-                <com.savvasdalkitsis.gameframe.draw.view.FillRectangleToolView
-                    style="?attr/actionButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:ignore="ContentDescription,RtlHardcoded" />
-
-                <com.savvasdalkitsis.gameframe.draw.view.OvalToolView
-                    style="?attr/actionButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:ignore="ContentDescription,RtlHardcoded" />
-
-                <com.savvasdalkitsis.gameframe.draw.view.FillOvalToolView
-                    style="?attr/actionButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:ignore="ContentDescription,RtlHardcoded" />
             </LinearLayout>
-        </HorizontalScrollView>
-    </RelativeLayout>
+
+        </RelativeLayout>
+
+        <com.savvasdalkitsis.gameframe.draw.view.ToolsView
+            android:id="@+id/view_draw_tools"
+            android:padding="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
 
     <LinearLayout
         android:layout_width="240dp"
@@ -133,7 +107,6 @@
             android:layout_margin="8dp"
             android:gravity="center_horizontal"
             android:text="@string/palettes" />
-
 
         <com.savvasdalkitsis.gameframe.draw.view.PalettesView
             android:id="@+id/view_draw_palettes"
