--- a/app/src/main/res/menu/menu_workspace.xml
+++ b/app/src/main/res/menu/menu_workspace.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
@@ -7,20 +8,23 @@
         android:orderInCategory="0"
         android:icon="@drawable/ic_border_outer_white_48px"
         android:id="@+id/menu_borders"
-        app:showAsAction="always"/>
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction" />
 
     <item
         android:title="@string/undo"
         android:orderInCategory="0"
         android:icon="@drawable/ic_undo_white_48px"
         android:id="@+id/menu_undo"
-        app:showAsAction="always"/>
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction" />
 
     <item
         android:title="@string/redo"
         android:orderInCategory="1"
         android:icon="@drawable/ic_redo_white_48px"
         android:id="@+id/menu_redo"
-        app:showAsAction="always"/>
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction" />
 
 </menu>
