Fix snackbar not animating due to accessibility service (Nova Launcher in my case) and custom fab not resetting position afterwards when animations are running (even with battery saver)

--- a/app/src/main/res/layout/activity_ip_setup.xml
+++ b/app/src/main/res/layout/activity_ip_setup.xml
@@ -67,6 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
+        app:layout_behavior="com.savvasdalkitsis.gameframe.infra.android.RespectSnackbarBehavior"
         android:clickable="true"
         android:focusable="true"
         tools:ignore="RtlHardcoded">
