--- a/app/src/main/res/layout/fragment_workspace.xml
+++ b/app/src/main/res/layout/fragment_workspace.xml
@@ -18,6 +18,55 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/view_draw_open_palette"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:src="@drawable/ic_palette_white_48px"
+                app:backgroundTint="@color/colorPrimaryDark"
+                app:fabSize="mini"
+                tools:ignore="ContentDescription,RtlHardcoded"/>
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/view_draw_open_layers"
+                app:backgroundTint="@color/colorPrimaryDark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignTop="@id/view_draw_open_palette"
+                android:src="@drawable/ic_layers_48px"
+                app:fabSize="mini"
+                tools:ignore="ContentDescription,RtlHardcoded"/>
+
+            <com.savvasdalkitsis.gameframe.feature.workspace.element.tools.view.ToolFabView
+                android:id="@+id/view_draw_tools_current"
+                style="?attr/actionButtonStyle"
+                app:backgroundTint="@color/colorPrimaryDark"
+                tools:src="@drawable/ic_create_white_48px"
+                android:layout_alignTop="@id/view_draw_open_palette"
+                android:layout_marginRight="16dp"
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@id/view_draw_open_layers"
+                tools:ignore="RtlHardcoded" />
+
+            <TextView
+                android:id="@+id/view_draw_tools_change"
+                android:text="@string/change_tool"
+                android:layout_toLeftOf="@id/view_draw_tools_current"
+                android:layout_toRightOf="@id/view_draw_open_palette"
+                android:layout_alignBottom="@id/view_draw_tools_current"
+                android:layout_alignTop="@id/view_draw_tools_current"
+                android:gravity="center_vertical|right"
+                android:layout_margin="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:ignore="RtlHardcoded" />
+
             <TextView
                 android:id="@+id/view_draw_project_name"
                 android:text="@string/untitled"
@@ -28,6 +77,7 @@
                 android:textSize="10sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/view_draw_open_palette"
                 tools:ignore="SmallSp" />
 
             <com.savvasdalkitsis.gameframe.feature.workspace.element.grid.view.LedGridView
@@ -40,64 +90,15 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp" />
 
-            <ImageView
-                android:id="@+id/view_draw_open_palette"
-                style="?attr/actionButtonStyle"
-                android:layout_marginLeft="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/view_draw_led_grid_view"
-                android:src="@drawable/ic_palette_black_48px"
-                tools:ignore="ContentDescription,RtlHardcoded" />
-
             <include
                 android:id="@+id/view_draw_palette"
                 layout="@layout/view_palette"
-                android:layout_toRightOf="@+id/view_draw_open_palette"
-                android:layout_toLeftOf="@+id/view_draw_open_layers"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/view_draw_led_grid_view"
-                android:layout_marginLeft="14dp"
-                android:layout_marginRight="14dp"
+                android:layout_marginRight="100dp"
+                android:layout_marginLeft="16dp"
                 tools:ignore="RtlHardcoded" />
-
-            <ImageView
-                android:id="@+id/view_draw_open_layers"
-                style="?attr/actionButtonStyle"
-                android:layout_marginRight="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_below="@id/view_draw_led_grid_view"
-                android:src="@drawable/ic_toc_black_48px"
-                tools:ignore="ContentDescription,RtlHardcoded" />
-
-            <LinearLayout
-                android:layout_below="@id/view_draw_palette"
-                android:orientation="horizontal"
-                android:padding="12dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/view_draw_tools_change"
-                    android:text="@string/change_tool"
-                    android:layout_gravity="center_vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <com.savvasdalkitsis.gameframe.feature.workspace.element.tools.view.ToolView
-                    android:id="@+id/view_draw_tools_current"
-                    style="?attr/actionButtonStyle"
-                    tools:src="@drawable/ic_create_black_48px"
-                    android:layout_gravity="center_vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:ignore="RtlHardcoded" />
-
-            </LinearLayout>
-
         </RelativeLayout>
 
         <com.savvasdalkitsis.gameframe.feature.workspace.element.tools.view.ToolsView
