--- a/app/src/main/res/layout/fragment_workspace.xml
+++ b/app/src/main/res/layout/fragment_workspace.xml
@@ -125,6 +125,30 @@
             android:gravity="center_horizontal"
             android:text="@string/palettes" />
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/view_draw_add_palette"
+                app:fabSize="mini"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/ic_add_white_48px"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/view_draw_add_palette_title"
+                android:text="@string/add_new_palette"
+                android:textSize="10sp"
+                android:gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                tools:ignore="SmallSp" />
+        </LinearLayout>
+
         <com.savvasdalkitsis.gameframe.feature.workspace.element.palette.view.PalettesView
             android:id="@+id/view_draw_palettes"
             android:layout_width="240dp"
