--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="error">#e57373</color>
     <color name="progress">#ff852d</color>
     <color name="layer_background">#f7a6a6</color>
+    <color name="transparent">#0000</color>
+    <color name="white">#fff</color>
 </resources>
