--- a/app/src/main/res/layout/fragment_workspace.xml
+++ b/app/src/main/res/layout/fragment_workspace.xml
@@ -148,6 +148,8 @@
             android:text="@string/palettes" />
 
         <LinearLayout
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
