Displaying palette name on workspace

--- a/app/src/main/res/layout/fragment_workspace.xml
+++ b/app/src/main/res/layout/fragment_workspace.xml
@@ -101,19 +101,32 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
-                android:layout_marginBottom="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp" />
+
+            <TextView
+                android:id="@+id/view_draw_palette_name"
+                android:text="@string/palette_name"
+                android:layout_marginTop="4dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="2dp"
+                android:textSize="10sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/view_draw_led_grid_view"
+                tools:ignore="SmallSp" />
 
             <include
                 android:id="@+id/view_draw_palette"
                 layout="@layout/view_palette"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/view_draw_led_grid_view"
+                android:layout_below="@id/view_draw_palette_name"
                 android:layout_marginRight="100dp"
                 android:layout_marginLeft="16dp"
                 tools:ignore="RtlHardcoded" />
+
         </RelativeLayout>
 
         <FrameLayout
