--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,4 +32,15 @@
         <item name="android:backgroundDimEnabled">false</item>
     </style>
 
+    <style name="AlertDialog.Changelog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@color/colorPrimary</item>
+        <item name="android:windowTitleStyle">@style/AlertDialogChangelogStyleTitle</item>
+    </style>
+
+    <style name="AlertDialogChangelogStyleTitle" parent="Base.DialogWindowTitle.AppCompat">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
+    </style>
+
 </resources>
