Add feedback functionality (fixes #23)

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,4 +2,5 @@
 <paths>
     <external-path path="Android/data/${applicationId}/cache" name="files_root" />
     <external-path name="external_files" path="."/>
+    <cache-path name="maoni-shares" path="." />
 </paths>
