--- a/app/src/main/res/menu/menu_control.xml
+++ b/app/src/main/res/menu/menu_control.xml
@@ -9,4 +9,11 @@
         android:title="@string/setup_ip_address"
         app:showAsAction="ifRoom"/>
 
+    <item
+        android:id="@+id/action_feedback"
+        android:orderInCategory="4"
+        android:icon="@drawable/ic_feedback_white_48px"
+        android:title="@string/feedback"
+        app:showAsAction="ifRoom"/>
+
 </menu>
