--- a/app/src/main/res/layout/activity_account_logged_in.xml
+++ b/app/src/main/res/layout/activity_account_logged_in.xml
@@ -39,6 +39,18 @@
         app:layout_constraintTop_toBottomOf="@+id/view_account_image" />
 
     <Button
+        android:id="@+id/view_account_re_upload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/re_upload_projects"
+        app:layout_constraintBottom_toTopOf="@+id/view_account_log_out"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
         android:id="@+id/view_account_log_out"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
