--- a/infra/src/main/res/values/ids.xml
+++ b/infra/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="snackbar" type="id"/>
     <item name="view_coordinator" type="id"/>
+    <item name="action_feedback" type="id"/>
 </resources>
